src/css/custom.css
/* ... */
html[data-theme="dark"] {
  :root {
    --ifm-font-color-base: var(--white);
    --ifm-menu-color: var(--white);
    --ifm-heading-color: var(--white);
    --ifm-background-color: var(--gray-900);

    --ifm-navbar-link-color: var(--gray-900);

    --ifm-footer-background-color: var(--gray-800);
    --ifm-footer-color: var(--gray-200);
    --ifm-footer-link-color: var(--white);

    --ifm-color-primary: var(--blue-400);
    --ifm-color-primary-dark: var(--blue-700);
    --ifm-color-primary-darker: var(--blue-800);
    --ifm-color-primary-darkest: var(--blue-900);
    --ifm-color-primary-light: var(--blue-500);
    --ifm-color-primary-lighter: var(--blue-400);
    --ifm-color-primary-lightest: var(--blue-300);

    --ifm-color-success-contrast-background: var(--mint-800);
    --ifm-color-success-contrast-foreground: var(--mint-100);

    --ifm-menu-color-background-hover: var(--gray-900);
    --ifm-menu-color-background-active: var(--gray-900);
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: 600;
  font-family: var(--font-sans-heading);
}

h1 {
  font-size: var(--font-size-5);
}

h2 {
  font-size: var(--font-size-4);
}

h3 {
  font-size: var(--font-size-3);
}

h4 {
  font-size: var(--font-size-2);
}

h5 {
  font-size: var(--font-size-1);
}

small {
  font-size: var(--font-size-0);
}

[aria-label="Breadcrumbs"] {
  display: none;
}

@media screen and (max-width: 980px) {
  /* span.breadcrumbsItemLink_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocBreadcrumbs-styles-module,
  a.breadcrumbsItemLink_node_modules-\@docusaurus-theme-classic-lib-next-theme-DocBreadcrumbs-styles-module {
    --ifm-breadcrumb-size-multiplier: 0.85 !important;
  } */

  h1 {
    font-size: var(--font-size-4);
  }

  h2 {
    font-size: var(--font-size-3);
  }

  h3 {
    font-size: var(--font-size-2);
  }

  h4 {
    font-size: var(--font-size-1);
  }

  h5 {
    font-size: var(--font-size-0);
  }

  small {
    font-size: var(--font-size-0);
  }
}


.navbar,
.navbar-sidebar__brand {
  background-color: #554288;
}

.navbar {
  height: 128px;
  display: grid;
  grid-template-rows: 50% 50%;
  padding: 0;
  box-shadow: none;
}

.dropdown > .navbar__link {
  padding-bottom: 1rem;
  margin-bottom: -1rem;
}

a.navbar__link {
  font-weight: 600;
  border-bottom: 4px solid transparent;
}

a.navbar__link.navbar__link--active,
a.navbar__link.navbar__link:hover {
  border-bottom: 4px solid var(--purple-700)
}

html[data-theme="dark"] .navbar__item {
  color: white;
}

html[data-theme="dark"] a.navbar__link.navbar__link--active,
html[data-theme="dark"] a.navbar__link.navbar__link:hover {
  border-bottom-color: var(--purple-300);
}

.main-wrapper {
  padding-top: 2rem;
}

:root {
  --docusaurus-highlighted-code-line-bg: rgb(72, 77, 91);
}

/* Pagination styling */
.pagination-nav__sublabel {
  display: none;
}

.pagination-nav__link {
  border: 0px;
  border-top: 1px solid var(--ifm-color-emphasis-300);
  border-radius: 0;
}

.navbar__item {
  height: 100%;
  display: flex;
  align-items: center;
}

/* Color Mode Toggle Switch */
.navbar__items--right div[role=button] {
  border: solid 2px var(--black);
  background: var(--black);
  border-radius: 100px;
  color: white;
  font-size: 24px;
}

.navbar__items--right button.clean-btn {
  color: #6E6F73;
}
/* Revert always ignores other styling and unstyles */
.navbar__items--right [class*="toggle_node_modules"]:hover button.clean-btn {
  color: revert;
}


div.footer__bottom.text--center {
text-align: right;
}


html
.navbar__items--right div:first-of-type div:first-of-type div:last-of-type {
  background-color: var(--purple-200);
}

/* Header Search Bar */
html .DocSearch-Button {
  height: 28px;
}

.DocSearch-Button .DocSearch-Search-Icon {
  height: 14px;
  width: 14px;
}

html .DocSearch-Button-Key {
  background: none;
  box-shadow: none;
  margin-right: 0;
  width: auto;
  padding-bottom: 0px;
}

.DocSearch-Button-Keys {
  justify-content: flex-end;
}


html .DocSearch {
  --docsearch-searchbox-background: #4B3677;
  border-radius: 6px;
  width: 400px;
}

html .DocSearch-Button-Placeholder {
  font-size: 0.85rem;
  color: #6E6F73;
}
html .DocSearch-Button .DocSearch-Search-Icon {
  color: #BFAFEB;
}

.DocSearch-Button:active .DocSearch-Search-Icon,
.DocSearch-Button:focus .DocSearch-Search-Icon,
.DocSearch-Button:hover .DocSearch-Search-Icon {
  color: black;
}

.DocSearch-Button-Keys {
  opacity: 0;
}

.DocSearch {
  --docsearch-searchbox-background: none;
  --docsearch-searchbox-focus-background: var(--ifm-color-white);
  --docsearch-text-color: var(--gray-800);
}

/* Mobile Menu */
.navbar__toggle {
  color: var(--white);
}

/* Table Styling */
table {
  border: solid 1px var(--ifm-table-border-color);
  max-width: fit-content;
}

table tr th:first-child,
table tr td:first-child {
  border-left: none;
}

table tr th:last-child,
table tr td:last-child {
  border-right: none;
}

table tr:last-child td {
  border-bottom: none;
}

table td {
  min-width: 225px;
}

table::-webkit-scrollbar {
  -webkit-appearance: none;
  height: 7px;
}

table::-webkit-scrollbar-track {
  background-color: var(--gray-100);
  border-top: solid 1px var(--ifm-table-border-color);
}

table::-webkit-scrollbar-thumb {
  border-radius: 100px;
  background-color: var(--ifm-table-border-color);
  -webkit-box-shadow: 0 0 1px var(--ifm-table-border-color);
}

.alert--success {
  --ifm-alert-background-color-highlight: hsl(
    var(--mint-400),
    var(15%)
  );
}

.alert--info {
  --ifm-alert-background-color-highlight: hsl(
    var(--blue-400),
    var(15%)
  );
}

.alert--caution {
  --ifm-alert-background-color-highlight: hsl(
    var(--orange-400),
    var(15%)
  );
}

.alert--danger {
  --ifm-alert-background-color-highlight: hsl(
    var(--orange-200),
    var(15%)
  );
}

.alert--highlight {
  --ifm-alert-background-color: #ECEFFD;
  padding: 1.5rem;
}
/* ... */

